<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_title">ProxyDroid %s</string>
    <string name="add_button">Add</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="already_running">Service has already been started</string>
    <string name="already_stopped">Service has already been stopped</string>
    <string name="app_name">ProxyDroid</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth">Enable Authentication</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Start Proxy when specified network is available</string>
    <string name="auto_connecting">Connecting...</string>
    <string name="auto_reconnected">Reconnecting</string>
    <string name="auto_set_proxy">Global Proxy</string>
    <string name="auto_set_proxy_summary">Enable the global proxy (needs ROOT permission and IPTABLES support)</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bypass_apps">Bypass Mode</string>
    <string name="bypass_apps_summary">Enable this option to bypass selected apps instead of proxying</string>
    <string name="bypass_del_text">Remove this address?</string>
    <string name="bypass_del_title">Confirm</string>
    <string name="bypass_edit_title">Address scope</string>
    <string name="cancel_button">Cancel</string>
    <string name="certificate">Certificate</string>
    <string name="certificate_summary">Client Certificate for HTTPS authentication</string>
    <string name="change_name">Rename</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="com.crashlytics.android.build_id">13342cf4-ad38-4861-931e-5cb017325ab9</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="copy_rights">"

ProxyDroid is an open source software published under GPLv3. 

If you have any question, please visit our project site on google code. 

(proxydroid.googlecode.com)"</string>
    <string name="crash_alert">"You are recovering from a crash. 

please report your problem to the project page. 

(proxydroid.googlecode.com)"</string>
    <string name="current_dir">Current Directory</string>
    <string name="default_web_client_id">1096038627085-de6572k5m9tbsmu2v5hm607vqe313pir.apps.googleusercontent.com</string>
    <string name="disconnect">Disconnect</string>
    <string name="dns_proxy">DNS Proxy</string>
    <string name="dns_proxy_summary">Enable DNS Proxy for some LAN users. Turn it on only if you know what it is</string>
    <string name="domain">Domain</string>
    <string name="domain_summary">Domain name for NTLM</string>
    <string name="err_addr">unknown domain name or incorrect format of IP address</string>
    <string name="excluded_ssid">Never Bound these WiFi SSID</string>
    <string name="excluded_ssid_summary">Never bind the proxy setting to specified SSID</string>
    <string name="export_button">Export</string>
    <string name="exporting">Exported to:</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fearute_cat">Feature Settings</string>
    <string name="feedback">Feedback @ofmax</string>
    <string name="file_chooser">Choose your key file</string>
    <string name="file_error">Too many rules:</string>
    <string name="file_size">File Size</string>
    <string name="file_toast">Import from this file:</string>
    <string name="firebase_database_url">https://proxydroid-eebb6.firebaseio.com</string>
    <string name="folder">Folder</string>
    <string name="forward_fail">Fail to connect</string>
    <string name="forward_stop">Disconnected</string>
    <string name="forward_success">Connected</string>
    <string name="function_cat">Service Controller</string>
    <string name="gcm_defaultSenderId">1096038627085</string>
    <string name="google_api_key">AIzaSyAvllRwaStt15XJNQrBRaCOVwJkUsnTbx8</string>
    <string name="google_app_id">1:1096038627085:android:2626ff7369ac1bc788a244</string>
    <string name="google_crash_reporting_api_key">AIzaSyAvllRwaStt15XJNQrBRaCOVwJkUsnTbx8</string>
    <string name="google_storage_bucket">proxydroid-eebb6.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="host">Host</string>
    <string name="host_empty">Host should not be empty</string>
    <string name="host_pac">PAC</string>
    <string name="host_pac_summary">The URL of your PAC file</string>
    <string name="host_summary">The host name of your proxy service</string>
    <string name="import_button">Import</string>
    <string name="importing">Importing…</string>
    <string name="key_manager">Key File Manager</string>
    <string name="loading">Loading app list...</string>
    <string name="local_port_empty">Local port should not be empty</string>
    <string name="msg_pac_error">Incorrect or unsupported PAC file</string>
    <string name="msg_resolve_error">Incorrect or unknown proxy host name</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="notif_cat">Notification Settings</string>
    <string name="notif_ringtone_summary">"Select the notification's ringtone"</string>
    <string name="notif_ringtone_title">Ringtone</string>
    <string name="notif_vibrate_summary">Also vibrate when connection status changes</string>
    <string name="notif_vibrate_title">Vibrate</string>
    <string name="ntlm">NTLM Authentication</string>
    <string name="ntlm_summary">Enable to support NTLM / NTLM2 authentication method</string>
    <string name="number_alert">Please check your port number</string>
    <string name="ok_button">OK</string>
    <string name="ok_iknow">OK, I know</string>
    <string name="pac">Auto Setting</string>
    <string name="pac_summary">Get proxy settings from the PAC file automatically</string>
    <string name="parent_dir">Parent Directory</string>
    <string name="password">Password</string>
    <string name="password_summary">Proxy Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="port">Port</string>
    <string name="port_summary">The port number of your Proxy service</string>
    <string name="preset_button">Presets</string>
    <string name="profile">Profiles</string>
    <string name="proxy_cat">Proxy Settings</string>
    <string name="proxy_type">Proxy Type</string>
    <string name="proxyed_apps">Individual Proxy</string>
    <string name="proxyed_apps_summary">Select apps for proxying or bypassing (needs ROOT permission and IPTABLES support)</string>
    <string name="service_controller">Proxy Switch</string>
    <string name="service_summary">Enable / Disable Proxy</string>
    <string name="set_bypass">Bypass Addresses</string>
    <string name="set_bypass_summary">Set bypass addresses</string>
    <string name="ssid">Bound Network</string>
    <string name="ssid_summary">Bind your proxy setting to 2G/3G Network or specified SSID</string>
    <string name="user">User</string>
    <string name="user_cat">Account Information</string>
    <string name="user_summary">Proxy User name</string>
</resources>